# JuPedSIM-for-FlowSIMPro

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  pypi-readme.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  default-template.md
.github/actions/build-docs/: action.yml
.github/actions/download-artefact/: action.yml  download-artefact.py
cmake_modules/: helper_functions.cmake
cmake_templates/: BuildInfo.hpp.in  run-performancetests.unix.in  run-systemtests.unix.in  run-systemtests.windows.in  unix_env.in
container/perf-measurement/: Dockerfile  container_perf_test.py
container/readthedocs/: Dockerfile
container/sumo/: Dockerfile
docs/: requirements.txt
docs/source/: conf.py  disclaimer.rst  history.rst  index.rst
docs/source/_scripts/: generate_bibtex.py
docs/source/_static/css/: custom.css
docs/source/_templates/autoapi/python/: module.rst
docs/source/citation/: citation.rst
docs/source/concepts/: geometry.rst  index.rst  routing.rst
docs/source/notebooks/: index.rst
docs/source/pedestrian_models/: index.rst
examples/: avm-sharp-corners.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7_avm.py  example8_headon_AVM.py  example8_headon_CSM.py  example9_adaptive_transition_validation.py
examples/xml/: README_distribution.md  README_transition_validation.md  adaptive_multi_exit_validation.xml  complex_bottleneck_192.xml  complex_bottleneck_192_age_mix.xml  distribution_by_density.xml  distribution_by_number.xml  distribution_by_percentage.xml  distribution_in_circles_by_density.xml  distribution_in_circles_by_number.xml  distribution_until_filled.xml  jsp_format.md  minimal_scenario.xml  minimal_scenario_with_ramp.xml  minimal_scenario_with_stair.xml  round_robin_multi_exit_validation.xml
libcommon/: CMakeLists.txt
libcommon/src/: Unreachable.hpp  Visitor.hpp
libsimulator/: CMakeLists.txt
libsimulator/benchmark/: BenchmarkMain.cpp  benchmarkCollisionGeometry.hpp  benchmarkLineSegment.hpp  buildGeometries.hpp
libsimulator/cli/: jupedsim_cli.cpp
libsimulator/src/: AABB.cpp  AABB.hpp  AgentRemovalSystem.hpp  AnticipationVelocityModel.cpp  AnticipationVelocityModel.hpp  AnticipationVelocityModelBuilder.cpp  AnticipationVelocityModelBuilder.hpp  AnticipationVelocityModelData.hpp  AnticipationVelocityModelUpdate.hpp  CfgCgal.hpp  Clonable.hpp  CollisionFreeSpeedModel.cpp  CollisionFreeSpeedModel.hpp  CollisionFreeSpeedModelBuilder.cpp  CollisionFreeSpeedModelBuilder.hpp  CollisionFreeSpeedModelData.hpp  CollisionFreeSpeedModelUpdate.hpp  CollisionFreeSpeedModelV2.cpp  CollisionFreeSpeedModelV2.hpp  CollisionFreeSpeedModelV2Builder.cpp  CollisionFreeSpeedModelV2Builder.hpp  CollisionFreeSpeedModelV2Data.hpp  CollisionFreeSpeedModelV2Update.hpp  CollisionGeometry.cpp  CollisionGeometry.hpp  Ellipse.cpp  Ellipse.hpp  Enum.hpp  GeneralizedCentrifugalForceModel.cpp  GeneralizedCentrifugalForceModel.hpp  GeneralizedCentrifugalForceModelBuilder.cpp  GeneralizedCentrifugalForceModelBuilder.hpp  GeneralizedCentrifugalForceModelData.hpp  GeneralizedCentrifugalForceModelUpdate.hpp  GenericAgent.hpp  GeometricFunctions.hpp  GeometryBuilder.cpp  GeometryBuilder.hpp  GeometrySwitchError.hpp  Graph.hpp  (+49 more)
libsimulator/test/: TestAABB.cpp  TestBasicPrimitiveTests.cpp  TestCollisionGeometry.cpp  TestEllipse.cpp  TestGraph.cpp  TestGrid2D.cpp  TestJourney.cpp  TestLineSegment.cpp  TestMesh.cpp  TestNeighborhoodSearch.cpp  TestPoint.cpp  TestSimulationClock.cpp  TestStage.cpp  TestUniqueID.cpp
notebooks/: corner-SocialForce.ipynb  corner.ipynb  direct_steering.ipynb  double-bottleneck.ipynb  getting_started.ipynb  journey.ipynb  lane-formation.ipynb  model-comparison.ipynb  motivation.ipynb  queues_waiting.ipynb  routing.ipynb  single-file.ipynb
notebooks/demo-data/bottleneck/: 040_c_56_h-.txt
performancetest/: comparison.ipynb  generate-flamegraphs.py  grosser_stern.py  large_street_network.py  single_run_analysis.ipynb
performancetest/performancetest/: geometry.py  stats_writer.py
python_bindings_jupedsim/: CMakeLists.txt  agent.cpp  anticipation_velocity_model.cpp  bindings_jupedsim.cpp  build_info.cpp  collision_free_speed_model.cpp  collision_free_speed_model_v2.cpp  conversion.cpp  conversion.hpp  generalized_centrifugal_force_model.cpp  geometry.cpp  journey.cpp  logging.cpp  logging.hpp  routing.cpp  simulation.cpp  social_force_model.cpp  stage.cpp  trace.cpp  transition.cpp
python_modules/jupedsim/jupedsim/: __init__.py  journey.py  library.py  simulation.py  sqlite_serialization.py  stages.py
python_modules/jupedsim/jupedsim/models/: anticipation_velocity_model.py  collision_free_speed.py  collision_free_speed_v2.py  generalized_centrifugal_force.py  social_force.py
python_modules/jupedsim/jupedsim/native/: __init__.py
python_modules/jupedsim/tests/: test_build_geometry.py  test_distributions.py  test_recordings.py
scripts/: Merge_Trajectories.py  build_standalone_linux.sh  build_standalone_windows.ps1  dxf2wkt.py  evac_uncertainty_cli.py  format_python  petrack2jpsvis.py  read_geometry.py
scripts/ci/: check_format.sh  gh_build_linux.sh
systemtest/: test_desired_speed.py  test_dxf_parser.py  test_model_constraints.py  test_model_properties.py  test_py_jupedsim.py  test_stages.py
